Avoids scrollbars when Home view is super narrow

--- a/src/webviews/apps/home/home.scss
+++ b/src/webviews/apps/home/home.scss
@@ -123,6 +123,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	gap: 0.4rem;
+	overflow: hidden;
 
 	&__header {
 		flex: none;
